--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "node": "^18.20.4",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "ws": "^8.18.0"
   }
 }
