--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "websocket-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  
   "dependencies": {
     "buffer": "^6.0.3",
     "node": "^18.20.4",
@@ -7,4 +14,5 @@
     "socket.io-client": "^4.7.5",
     "ws": "^8.18.0"
   }
+  
 }
