--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-nice-avatar": "^1.5.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
