--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-nice-avatar": "^1.5.0",
+    "react-use-websocket": "^3.0.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
