--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,23 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v4
-
-      - name: Publish frontend
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: client/package-lock.json
+      
+      - name: Install dependencies
+        run: npm ci
+        working-directory: client
+      
+      - name: Build React app
+        run: npm run build
+        working-directory: client
+      
+      - name: Deploy to GitHub Pages
         uses: rayluo/github-pages-overwriter@v1.3
         with:
-          source-directory: client
+          source-directory: client/dist
