--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
         working-directory: client
       
       - name: Deploy to GitHub Pages
-        uses: rayluo/github-pages-overwriter@v1.3
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          source-directory: client/dist
+          publish_dir: ./client/dist
+          user_name: "github-actions[bot]"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          user_email: "github-actions[bot]@users.noreply.github.com"
